--- a/index.html
+++ b/index.html
@@ -59,11 +59,15 @@
 <!-- Main Content
 ================================================== -->
 <section id="body" class="">
-	<ul class="section-language">
-	<li><a href="index-Farsi.html" class="link-language">Persian</a></li>
-	</ul>
+<!--	<ul class="section-language">-->
+<!--	<li><a href="index-Farsi.html" class="link-language">Persian</a></li>-->
+<!--	</ul>-->
 	<div class="container">
-
+		<div class="">
+			<ul class="section-language">
+			<li><a href="index-Farsi.html" class="link-language">Persian</a></li>
+			</ul>
+		</div>
 		<!-- MAIN MENU -->
 		<div class="main-menu" id="main-menu">
 			<ul class="main-menu-list">
