--- a/index-Farsi.html
+++ b/index-Farsi.html
@@ -59,11 +59,13 @@
 <!-- Main Content
 ================================================== -->
 <section id="body" class="">
-	<ul class="section-language">
-		<li><a href="index.html" class="link-language">English</a></li>
-	</ul>
+<!--	<ul class="section-language">-->
+<!--		<li><a href="index.html" class="link-language">English</a></li>-->
+<!--	</ul>-->
 	<div class="container">
-
+			<ul class="section-language">
+				<li><a href="index.html" class="link-language">English</a></li>
+			</ul>
 		<!-- MAIN MENU -->
 		<div class="main-menu" id="main-menu">
 			<ul class="main-menu-list">
