--- a/single-Farsi.html
+++ b/single-Farsi.html
@@ -71,7 +71,7 @@
 				<!-- post content -->
 				<div class="blog-single-content">
 					<p>شاید برای خیلی ها هدف از تحصیل دراین مقطع گرفتن مدرک باشه،
-						اما اگر تحصیل ما هدف دار باشه اونوقت مدرکی رو داریم که میتونه
+						اما اگر هدف فقط تحصیل مدرک نباشه اونوقت مدرکی رو داریم که میتونه
 						در آینده نتایج خوبی برای ما به همراه داشته باشه مثلا کار ودرآمد
 						مناسب، اما مهمتر از همه اگر این انتخاب از روی علاقه باشه اونوقت
 						کار کردن لذت بخش میشه پس من سعی کردم در رشته ای تحصیل کنم و چیزی
